@@ -1142,6 +1142,9 @@ Revision history for Perl extension Imager.
   provides is needed elsewhere.
 - minor POD fixes
 - added a brief tutorial
+- Imager::Font->new() for the tt (Freetype 1.x) driver now correctly
+  handles errors from i_tt_new(), and passed error messages now 
+  generated by i_tt_new().
 
 =================================================================
 
